[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Menu/SettingsMenu.gd" type="Script" id=1]

[node name="SettingsMenu" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -460.0
margin_top = -320.0
margin_right = 460.0
margin_bottom = 320.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
margin_left = 120.0
margin_top = 80.0
margin_right = 800.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 120.0
margin_top = 80.0
margin_right = 800.0
margin_bottom = 560.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 680.0
margin_bottom = 411.0
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 660.0
margin_bottom = 391.0
tab_align = 0

[node name="Display" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VboxOptions" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/TabContainer/Display"]
margin_left = 20.0
margin_top = 20.0
margin_right = 612.0
margin_bottom = 315.0
custom_constants/separation = 20
alignment = 1

[node name="ResolutionOptions" type="OptionButton" parent="MarginContainer/VBoxContainer/MarginContainer/TabContainer/Display/VboxOptions"]
margin_top = 67.0
margin_right = 592.0
margin_bottom = 92.0
rect_min_size = Vector2( 200, 25 )
text = "Resolution"

[node name="ScreenModeOptions" type="OptionButton" parent="MarginContainer/VBoxContainer/MarginContainer/TabContainer/Display/VboxOptions"]
margin_top = 112.0
margin_right = 592.0
margin_bottom = 137.0
rect_min_size = Vector2( 200, 25 )

[node name="Borderless" type="CheckBox" parent="MarginContainer/VBoxContainer/MarginContainer/TabContainer/Display/VboxOptions"]
margin_top = 157.0
margin_right = 592.0
margin_bottom = 182.0
rect_min_size = Vector2( 200, 25 )
disabled = true
text = "Borderless"

[node name="ApplyButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/TabContainer/Display/VboxOptions"]
margin_top = 202.0
margin_right = 592.0
margin_bottom = 227.0
rect_min_size = Vector2( 200, 25 )
text = "Apply"

[node name="Gameplay" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -596.0
margin_bottom = -808.0

[node name="VboxOptions" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/TabContainer/Gameplay"]
visible = false
margin_right = 40.0

[node name="BackButtonContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 415.0
margin_right = 680.0
margin_bottom = 480.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/BackButtonContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 660.0
margin_bottom = 45.0
rect_min_size = Vector2( 200, 25 )
text = "Back"
